--- a/test/zmqbroker/Makefile
+++ b/test/zmqbroker/Makefile
@@ -169,9 +169,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign test/zmqbroker/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu test/zmqbroker/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign test/zmqbroker/Makefile
+	  $(AUTOMAKE) --gnu test/zmqbroker/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
