add normal test part

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES=libgsnetwork.a
 libgsnetwork_a_SOURCES=epoll.cpp thread.cpp ipcbase.cpp context.cpp
 INCLUDES=-I../include -I/usr/local/include -I/usr/include
-LDADD=-L/usr/local/lib -L/usr/lib -L/lib
+LDADD=-L/usr/local/lib -L/usr/lib -L/lib -lpthread
 DEFS=-DLINUX
