--- a/test/normalserver/Makefile.am
+++ b/test/normalserver/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS=testserver
 testserver_SOURCES=main.cpp
 INCLUDES=-I../../include -I../../zmqware -I/usr/local/include -I/usr/include 
-LDADD=-L/usr/local/lib -L/usr/lib -L/lib -L../../source/ -lpthread -lgsnetwork 
+LDADD=-L/usr/local/lib -L/usr/lib -L/lib -L../../source/  -lgsnetwork -lpthread 
 DEFS=-DLINUX 
