--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES=libgsnetwork.a
-libgsnetwork_a_SOURCES=epoll.cpp thread.cpp ipcbase.cpp context.cpp
+libgsnetwork_a_SOURCES=epoll.cpp thread.cpp ipcbase.cpp context.cpp stream.cpp
 INCLUDES=-I../include -I/usr/local/include -I/usr/include
 LDADD=-L/usr/local/lib -L/usr/lib -L/lib -lpthread
 DEFS=-DLINUX
