--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,3 +1,3 @@
 #AUTOMAKE_OPTIONS=foreign
-SUBDIRS=zmqserver zmqclient zmqbroker normalserver normalclient memtest
+SUBDIRS=zmqserver zmqclient zmqbroker normalserver normalclient memtest cgiscript cgippscript
 #EXTRA_DIST=TESTREADME.md
