--- a/configure.in
+++ b/configure.in
@@ -28,4 +28,5 @@ AC_CHECK_FUNCS([memset])
 AC_PROG_MAKE_SET
 
 AC_OUTPUT(Makefile source/Makefile zmqware/Makefile test/Makefile test/zmqserver/Makefile 
-			test/zmqbroker/Makefile test/zmqclient/Makefile test/normalserver/Makefile test/normalclient/Makefile test/memtest/Makefile)
+			test/zmqbroker/Makefile test/zmqclient/Makefile test/normalserver/Makefile test/normalclient/Makefile test/memtest/Makefile 
+			test/cgiscript/Makefile test/cgippscript/Makefile)
