--- a/test/normalserver/Makefile.am
+++ b/test/normalserver/Makefile.am
@@ -1,3 +1,4 @@
+AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=testserver
 testserver_SOURCES=main.cpp
 INCLUDES=-I../../include -I../../zmqware -I/usr/local/include -I/usr/include 
