--- a/test/zmqbroker/Makefile.am
+++ b/test/zmqbroker/Makefile.am
@@ -1,3 +1,4 @@
+AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=brokerserver
 brokerserver_SOURCES=main.cpp
 INCLUDES=-I../include -I../../zmqware -I/usr/local/include -I/usr/include 
