--- a/test/zmqbroker/Makefile.in
+++ b/test/zmqbroker/Makefile.in
@@ -153,6 +153,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+AUTOMAKE_OPTIONS = foreign
 brokerserver_SOURCES = main.cpp
 INCLUDES = -I../include -I../../zmqware -I/usr/local/include -I/usr/include 
 LDADD = -L/usr/local/lib -L/usr/lib -L/lib -L../../zmqware -lzmqwrap -lzmq 
