--- a/test/zmqserver/Makefile
+++ b/test/zmqserver/Makefile
@@ -63,12 +63,12 @@ DIST_SOURCES = $(testserver_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/sandstone/workpath/gsnetwork/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/wangbin/workpath/github/gsnetwork/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /home/sandstone/workpath/gsnetwork/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/sandstone/workpath/gsnetwork/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/sandstone/workpath/gsnetwork/missing --run automake-1.11
-AWK = mawk
+AUTOCONF = ${SHELL} /home/wangbin/workpath/github/gsnetwork/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/wangbin/workpath/github/gsnetwork/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/wangbin/workpath/github/gsnetwork/missing --run automake-1.11
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -95,7 +95,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/sandstone/workpath/gsnetwork/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/wangbin/workpath/github/gsnetwork/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = gsnetwork
@@ -108,13 +108,13 @@ PACKAGE_VERSION = 1.0
 PATH_SEPARATOR = :
 RANLIB = ranlib
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = 
 VERSION = 1.0
-abs_builddir = /home/sandstone/workpath/gsnetwork/test/zmqserver
-abs_srcdir = /home/sandstone/workpath/gsnetwork/test/zmqserver
-abs_top_builddir = /home/sandstone/workpath/gsnetwork
-abs_top_srcdir = /home/sandstone/workpath/gsnetwork
+abs_builddir = /home/wangbin/workpath/github/gsnetwork/test/zmqserver
+abs_srcdir = /home/wangbin/workpath/github/gsnetwork/test/zmqserver
+abs_top_builddir = /home/wangbin/workpath/github/gsnetwork
+abs_top_srcdir = /home/wangbin/workpath/github/gsnetwork
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -134,7 +134,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/sandstone/workpath/gsnetwork/install-sh
+install_sh = ${SHELL} /home/wangbin/workpath/github/gsnetwork/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
