--- a/module/mongoware/Makefile.am
+++ b/module/mongoware/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES=libmongoware.a
-libmongoware_a_SOURCES=mongodef.h mongo.h mongo.cpp
+libmongoware_a_SOURCES=mongodef.h dbconnection.cpp dbconnection.h connectionpool.h connectionpool.cpp
 INCLUDES=-I/usr/local/include -I/usr/include -I./mongoinclude
 LDADD=-L/usr/local/lib -L/usr/lib -L/lib
 DEFS=-DLINUX
