update mongo test

--- a/configure.in
+++ b/configure.in
@@ -35,6 +35,7 @@ AC_OUTPUT(Makefile source/Makefile
 			test/normalserver/Makefile 
 			test/normalclient/Makefile 
 			test/memtest/Makefile 
+			test/mongotest/Makefile 
 			test/cgiscript/Makefile
 			test/cgippscript/Makefile
 			test/rawweb/Makefile
