--- a/module/mysqlware/Makefile
+++ b/module/mysqlware/Makefile
@@ -184,9 +184,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign module/mysqlware/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu module/mysqlware/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign module/mysqlware/Makefile
+	  $(AUTOMAKE) --gnu module/mysqlware/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
