--- a/module/luaware/Makefile
+++ b/module/luaware/Makefile
@@ -156,7 +156,7 @@ top_builddir = ../..
 top_srcdir = ../..
 luatest_SOURCES = main.cpp luainstance.cpp luabinder.cpp luafuncsrc.cpp
 INCLUDES = -I/usr/local/include -I/usr/include
-LDADD = -L/usr/local/lib -L/usr/lib -L/lib -L./luaclib -lmytestlib -llua -ldl
+LDADD = -L/usr/local/lib -L/usr/lib -L/lib -llua -ldl
 AM_LDFLAGS = -rdynamic #g++'s flag
 all: all-am
 
