--- a/module/luaware/Makefile.in
+++ b/module/luaware/Makefile.in
@@ -45,7 +45,7 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_luatest_OBJECTS = main.$(OBJEXT) luainstance.$(OBJEXT) \
-	luabinder.$(OBJEXT) luafuncsrc.$(OBJEXT)
+	luabinder.$(OBJEXT)
 luatest_OBJECTS = $(am_luatest_OBJECTS)
 luatest_LDADD = $(LDADD)
 luatest_DEPENDENCIES =
@@ -153,7 +153,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-luatest_SOURCES = main.cpp luainstance.cpp luabinder.cpp luafuncsrc.cpp
+luatest_SOURCES = main.cpp luainstance.cpp luabinder.cpp
 INCLUDES = -I/usr/local/include -I/usr/include
 LDADD = -L/usr/local/lib -L/usr/lib -L/lib -llua -ldl
 AM_LDFLAGS = -rdynamic #g++'s flag
@@ -239,7 +239,6 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/luabinder.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/luafuncsrc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/luainstance.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 
