--- a/module/luaware/Makefile
+++ b/module/luaware/Makefile
@@ -170,9 +170,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign module/luaware/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu module/luaware/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign module/luaware/Makefile
+	  $(AUTOMAKE) --gnu module/luaware/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
