--- a/test/templatetest/Makefile.am
+++ b/test/templatetest/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=templatetest
-templatetest_SOURCES=main.cpp test.inl
+templatetest_SOURCES=main.cpp test.inl head.h test.cpp
 INCLUDES=-I/usr/local/include -I/usr/include 
 LDADD=-L/usr/local/lib -L/usr/lib -L/lib
 DEFS=-DLINUX 
