--- a/module/zmqware/Makefile.in
+++ b/module/zmqware/Makefile.in
@@ -173,9 +173,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu module/zmqware/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign module/zmqware/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu module/zmqware/Makefile
+	  $(AUTOMAKE) --foreign module/zmqware/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
