--- a/test/testcenter/Makefile.am
+++ b/test/testcenter/Makefile.am
@@ -2,5 +2,5 @@ AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=testcenter
 testcenter_SOURCES=main.cpp head.h test.cpp
 INCLUDES=-I/usr/local/include -I/usr/include 
-LDADD=-L/usr/local/lib -L/usr/lib -L/lib
-DEFS=-DLINUX 
+LDADD=-L/usr/local/lib -L/usr/lib -L/lib -lpthread
+DEFS=-DLINUX
