--- a/test/testcenter/Makefile.in
+++ b/test/testcenter/Makefile.in
@@ -81,7 +81,7 @@ CXX = @CXX@
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
-DEFS = -DLINUX 
+DEFS = -DLINUX
 DEPDIR = @DEPDIR@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
@@ -159,7 +159,7 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 testcenter_SOURCES = main.cpp head.h test.cpp
 INCLUDES = -I/usr/local/include -I/usr/include 
-LDADD = -L/usr/local/lib -L/usr/lib -L/lib
+LDADD = -L/usr/local/lib -L/usr/lib -L/lib -lpthread
 all: all-am
 
 .SUFFIXES:
